<resources>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Find Place</string>
    <string name="pick_place">Select Place</string>

    <string name="app_name">Generalist</string>
    <string name="title_activity_display_lists">displayLists</string>
    <string name="action_settings">Settings</string>
    <string name="work_rest_and_play">WORK REST AND PLAY!</string>
    <string name="add_lists">Add Item</string>
    <string name="view_lists">All Items</string>
    <string name="save">Save</string>
    <string name="name">Name…</string>
    <string name="list_contents">Item Note:</string>

    <string name="contents">Contents…</string>
    <string name="category">Category:</string>
    <string name="shopping">Shopping…</string>
    <string name="cancel">Cancel</string>
    <string name="list_name">Item Name:</string>
    <string name="list__name">Item Name:</string>
    <string name="nameDotdot">Name…</string>

    <string name="home">Home</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="view_contents">View Contents</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected">Date Selected: </string>
    <string name="date_due">Date Due: </string>
    <string name="time_due">Time Due:</string>

    <string-array name="categories">
        <item>Shopping (Green)</item>
        <item>Medicine (Blue)</item>
        <item>Work (Red)</item>
        <item>Home (Grey)</item>
        <item>Birthdays (Yellow)</item>
        <item>Custom (Cyan)</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_place_picker">Map</string>
    <string name="generalist">Generalist</string>
    <string name="nameDot">Name...</string>
    <string name="categoryss">Category:</string>


</resources>
