<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.tees.com2060.kitkat.generalist.Editing">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:titleTextAppearance="@color/colorWhite"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/pad_size_16dp"
        android:layout_marginLeft="@dimen/pad_size_16dp"
        android:layout_below="@+id/editBar"
        android:layout_above="@+id/relativeLayoutbottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="List Name:"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="15sp"
            android:layout_alignBaseline="@+id/editTextName"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:hint="Name..."
            android:layout_marginLeft="11dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginStart="11dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="22dp"
            android:text="@string/list_contents"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/editTextContents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:ems="10"
            android:hint="Contents..."
            android:inputType="textMultiLine"
            android:gravity="left|top" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextName"
            android:layout_marginTop="12dp"
            android:text="@string/list_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutbottom"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save_button"
            android:layout_alignBottom="@+id/save_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="26dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="24dp"
            android:text="@string/save" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/homeButton"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="@dimen/pad_size_16dp"
        android:layout_marginRight="@dimen/pad_size_16dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_home_dark" />


    <Spinner
        android:id="@+id/ContentsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/editBar"
        android:layout_alignStart="@+id/relativeLayout" />



</RelativeLayout>